[tool.poetry]
name = "chapter-01"
version = "1.0"
description = "full stack starting"
authors = ["Lesia Soloviova <solovyova.lesya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
